WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29796
.maxLength should return -1 if maxlength attribute is not specified
https://bugs.webkit.org/show_bug.cgi?id=29796
Summary
.maxLength should return -1 if maxlength attribute is not specified
Kent Tamura
Reported
Monday, September 28, 2009 7:21:11 AM UTC
HTML5 draft was updated so that .maxLength IDL attributes are signed, and shoud return -1 if the corresponding HTML attribute is missing.
Attachments
Proposed patch
(12.19 KB, patch)
2009-09-28 22:42 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
Monday, September 28, 2009 7:24:19 AM UTC
In Firefox 3.5 and Opera 10, input.maxLength returns -1 in that case. In IE8, input.maxLength returns 2147483647. They don't support for textarea.maxLength yet. In WebKit, input.maxLength returns 524288 for now.
Kent Tamura
Comment 2
Tuesday, September 29, 2009 6:39:37 AM UTC
HTML5 draft says:
> If, on the other hand, it fails or returns an out of range value, or if the attribute > is absent, the default value must be returned instead, or −1 if there is no default > value. On setting, if the value is negative, the user agent must fire an > INDEX_SIZE_ERR exception. Otherwise, the given value must be converted to the > shortest possible string representing the number as a valid non-negative integer > and then that string must be used as the new content attribute value.
We may return "the default value". So it's ok that HTMLInputElement.maxLength returns 524288 in WebKit, 2147483647 in IE8.
Kent Tamura
Comment 3
Tuesday, September 29, 2009 6:42:40 AM UTC
Created
attachment 40283
[details]
Proposed patch The patch addresses - HTMLTextAreaElement.maxLength value without maxlength= attribute - INDEX_SIZE_ERR
Darin Adler
Comment 4
Tuesday, September 29, 2009 7:29:36 PM UTC
Comment on
attachment 40283
[details]
Proposed patch
> -void HTMLInputElement::setMaxLength(int _maxLength) > +void HTMLInputElement::setMaxLength(int _maxLength, ExceptionCode& exceptionCode) > { > - setAttribute(maxlengthAttr, String::number(_maxLength)); > + if (_maxLength < 0) > + exceptionCode = INDEX_SIZE_ERR; > + else > + setAttribute(maxlengthAttr, String::number(_maxLength)); > }
Underscore in the argument name is usually something we'd want to avoid. One of the few abbreviations we use consistently in WebCore code is "ec" for the exception code. I think using exceptionCode instead is nicer, but I'd prefer to stay consistent. I was under the impression that INDEX_SIZE_ERR was usually generated by having an attribute of type unsigned long in IDL and handled automatically by the bindings. Could you find another example and make sure you are doing this consistently? r=me as-is, but please consider the comments above too.
WebKit Commit Bot
Comment 5
Tuesday, September 29, 2009 10:26:01 PM UTC
Comment on
attachment 40283
[details]
Proposed patch Clearing flags on attachment: 40283 Committed
r48903
: <
http://trac.webkit.org/changeset/48903
>
WebKit Commit Bot
Comment 6
Tuesday, September 29, 2009 10:26:05 PM UTC
All reviewed patches have been landed. Closing bug.
Kent Tamura
Comment 7
Wednesday, September 30, 2009 5:10:49 AM UTC
(In reply to
comment #4
)
> (From update of
attachment 40283
[details]
) > > -void HTMLInputElement::setMaxLength(int _maxLength) > > +void HTMLInputElement::setMaxLength(int _maxLength, ExceptionCode& exceptionCode) > > { > > - setAttribute(maxlengthAttr, String::number(_maxLength)); > > + if (_maxLength < 0) > > + exceptionCode = INDEX_SIZE_ERR; > > + else > > + setAttribute(maxlengthAttr, String::number(_maxLength)); > > }
> I was under the impression that INDEX_SIZE_ERR was usually generated by having > an attribute of type unsigned long in IDL and handled automatically by the > bindings. Could you find another example and make sure you are doing this > consistently?
For example, HTMLTableElement::insertRow(long) and deleteRow(long) have similar code. I couldn't find examples of properties, not functions. We need to use signed long for maxLength IDL definition because it can return -1. I think we have no choices other than this code.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug