2009-09-29  Kent Tamura  <tkent@chromium.org>

Reviewed by Darin Adler.

        Update for .maxLength behavior change.
        https://bugs.webkit.org/show_bug.cgi?id=29796

        * fast/forms/input-maxlength-expected.txt:
        * fast/forms/input-maxlength.html:
        * fast/forms/script-tests/textarea-maxlength.js:
        * fast/forms/textarea-maxlength-expected.txt:
2009-09-29  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Follows HTML5's maxLength change in September 2009.
        - Change HTMLTextAreaElement.maxLength type to signed.
        - HTMLTextAreaElement.maxLength returns -1 if maxlength= attribute is missing.
        - HTMLTextAreaElement.maxLength and HTMLInputElement.maxLength
          throw INDEX_SIZE_ERR for setting negative values.
        https://bugs.webkit.org/show_bug.cgi?id=29796

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::setMaxLength):
        * html/HTMLInputElement.h:
        * html/HTMLInputElement.idl:
        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::handleBeforeTextInsertedEvent):
        (WebCore::HTMLTextAreaElement::maxLength):
        (WebCore::HTMLTextAreaElement::setMaxLength):
        * html/HTMLTextAreaElement.h:
        * html/HTMLTextAreaElement.idl:

Canonical link: https://commits.webkit.org/40463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48903 268f45cc-cd09-0410-ab3c-d52691b4dbfc