WebCore/html/HTMLInputElement.h
@@ -201,7 +201,7 @@ public:
 #endif
 
     int maxLength() const;
-    void setMaxLength(int);
+    void setMaxLength(int, ExceptionCode&);
 
     bool multiple() const;
     void setMultiple(bool);
