WebCore/html/HTMLTextAreaElement.h
@@ -79,8 +79,8 @@ public:
     String defaultValue() const;
     void setDefaultValue(const String&);
     int textLength() const { return value().length(); }
-    unsigned maxLength() const;
-    void setMaxLength(unsigned);
+    int maxLength() const;
+    void setMaxLength(int, ExceptionCode&);
     
     void rendererWillBeDestroyed();
     
